mobile overflow fix attempt

--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -12,6 +12,9 @@
 .hide-overlay {
     overflow-x: hidden;
 }
+html, body {
+    overflow-x: hidden;
+}
 
 .logo-container {
     display: block;
